--- a/Bash/Email_Via_Script/msmtp.conf
+++ b/Bash/Email_Via_Script/msmtp.conf
@@ -1,5 +1,5 @@
 root=testing2526isapasc56837@gmail.com
 mailhub=smtp.gmail.com:587
 AuthUser=testing2526isapasc56837@gmail.com
-AuthPass=lovestowritecscripts
+AuthPass=#PUTTHEPASSWORDHERE
 UseSTARTTLS=yes
